--- a/src/style.sass
+++ b/src/style.sass
@@ -1,6 +1,7 @@
+@import "style/global"
 @import "style/ui-grid"
 
 @import "modules/guide/style"
-@import "modules/items/style"
-@import "modules/inventory/style"
+//@import "modules/items/style"
+//@import "modules/inventory/style"
 
