--- a/src/style.sass
+++ b/src/style.sass
@@ -2,6 +2,6 @@
 @import "style/ui-grid"
 
 @import "modules/guide/style"
-//@import "modules/items/style"
+@import "modules/items/style"
 //@import "modules/inventory/style"
 
