Started using Jade templates. Added filtering for inventory, improved item add field.

--- a/pub/style.css
+++ b/pub/style.css
@@ -1,59 +1,1 @@
-body, table, textarea {
-  font-family: 'Segoe WP', 'segoe ui', arial, sans-serif; }
-
-.ui-grid {
-  font-family: 'Helvetica', 'Arial', sans-serif;
-  font-size: small; }
-
-.ui-grid-menu-button {
-  height: 24px; }
-
-#GuideLabelFilter_chosen {
-  min-width: 150px; }
-
-#Guide .entry.with-children > ul {
-  padding-left: 1em; }
-
-#Guide ul.root {
-  padding: 0; }
-
-#Guide .entry.with-content > .header > .title,
-#Guide .entry.with-children > .header > .title {
-  cursor: pointer; }
-
-#Guide .entry {
-  display: block;
-  margin: 0.5em 0; }
-  #Guide .entry .buttons {
-    display: inline-block; }
-    #Guide .entry .buttons button {
-      border-radius: 10px; }
-  #Guide .entry .header {
-    border-radius: 0.5em; }
-    #Guide .entry .header .title {
-      display: inline-block;
-      min-width: 30em; }
-  #Guide .entry .content {
-    border-radius: 0 0 0.5em 0.5em; }
-    #Guide .entry .content > div {
-      margin: 0.5em; }
-  #Guide .entry .without-content.without-children .jqx-expander-arrow {
-    display: none !important; }
-
-#Guide .label {
-  display: inline-block;
-  border: 1px solid silver;
-  padding: 0.2em 0.6em 0.3em;
-  font-size: 75%;
-  font-weight: 700;
-  line-height: 1;
-  color: #fff;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: baseline;
-  border-radius: .5em;
-  background: #AAA; }
-
-.ui-grid {
-  width: 99.87%;
-  height: 600px; }
+body,table,textarea{font-family:'Segoe WP', 'segoe ui', arial, sans-serif}.ui-grid{font-family:'Helvetica', 'Arial', sans-serif;font-size:small}.ui-grid-menu-button{height:24px}#GuideLabelFilter_chosen{min-width:150px}#Guide .entry.with-children>ul{padding-left:1em}#Guide ul.root{padding:0}#Guide .entry.with-content>.header>.title,#Guide .entry.with-children>.header>.title{cursor:pointer}#Guide .entry{display:block;margin:0.5em 0}#Guide .entry .buttons{display:inline-block}#Guide .entry .buttons button{border-radius:10px}#Guide .entry .header{border-radius:0.5em}#Guide .entry .header .title{display:inline-block;min-width:30em}#Guide .entry .content{border-radius:0 0 0.5em 0.5em}#Guide .entry .content>div{margin:0.5em}#Guide .entry .without-content.without-children .jqx-expander-arrow{display:none !important}#Guide .label{display:inline-block;border:1px solid silver;padding:0.2em 0.6em 0.3em;font-size:75%;font-weight:700;line-height:1;color:#fff;text-align:center;white-space:nowrap;vertical-align:baseline;border-radius:.5em;background:#AAA}.ui-grid{width:99.87%;height:600px}
