Added armor calc. Fixed some bugs.

--- a/src/index.jade
+++ b/src/index.jade
@@ -30,6 +30,7 @@ body(ng-app="dsc")
 			li: a(href="#/guide") Guide
 			li: a(href="#/inventory") Inventory
 			li: a(href="#/w-calc") Weapon calculator
+			li: a(href="#/a-calc") Armor calculator
 			li: a(href="#/stats") Stats
 			li: a(href="#/items") Items
 
