Optimized armor calc. Fixed upgrade material parsing.

--- a/src/modules/a-calc/view.jade
+++ b/src/modules/a-calc/view.jade
@@ -9,4 +9,5 @@
 	br
 	button(ng-click="calculate()") Calculate
 
+	| {{gridOptions.data.length}} result(s)
 	div(ui-grid-auto-resize ui-grid="gridOptions")
