--- a/src/style.sass
+++ b/src/style.sass
@@ -3,5 +3,5 @@
 
 @import "modules/guide/style"
 @import "modules/items/style"
-//@import "modules/inventory/style"
+@import "modules/inventory/inventory-style"
 
