--- a/src/style.sass
+++ b/src/style.sass
@@ -1,6 +1,8 @@
 @import "style/global"
 @import "style/ui-grid"
 
+@import "style/layout"
+
 @import "modules/guide/style"
 @import "modules/items/style"
 @import "modules/inventory/inventory-style"
