--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -1,6 +1,26 @@
-body, table, textarea
+body, table, textarea, button
 	font-family: 'Segoe WP', 'segoe ui', arial, sans-serif
+	font-size: medium
 
 
 angucomplete-alt
 	display: inline-block
+
+
+input[type="number"]
+	width: 50px
+
+
+button
+	border-radius: 8px
+	border-width: 1px
+	padding: 0.5em
+	//width: 200px
+	//height: 100px
+	display: inline-block
+	vertical-align: baseline
+	background: rgb(206,220,231) /* Old browsers */
+	background: linear-gradient(to bottom, rgba(230,230,230,1) 0%,rgba(200,200,200,1) 100%) /* W3C */
+
+	&:focus
+		outline: 1px dashed silver
