--- a/src/modules/armor-calc/armor-calc-view.jade
+++ b/src/modules/armor-calc/armor-calc-view.jade
@@ -1,39 +1,47 @@
 #ArmorCalc
 
-	.parameters
-		.weight
-			label Weight&nbsp;
+	table.parameters
+		tr.weight
+			th.left Weight:
 
-			label(ng-repeat="wl in weightLimits")
-				input(type="radio" name="selectedWeightLimit" ng-model="$parent.selectedWeightLimit" value="{{wl}}")
-				| {{wl * 100}}%&nbsp;
+			td
+				label Limit:
 
-			label
-				| Reserved (weapons):
-				input(ng-model="reservedWeight" type="number")
+					label(ng-repeat="wl in weightLimits")
+						input(type="radio" name="selectedWeightLimit" ng-model="$parent.params.selectedWeightLimit" value="{{wl}}")
+						| {{wl * 100}}%
 
-			label
-				| Maximum:&nbsp;
-				input(type="number" ng-model="maxLoad" readonly)
+				label
+					| Reserved (weapons):
+					input(ng-model="params.reservedWeight" type="number")
 
-		.modifiers
-			label Modifiers&nbsp;
+				label
+					| Maximum:
+					input(type="number" ng-model="maxLoad" readonly)
 
-			label(ng-repeat="mod in modifiers" title="{{mod.title}}")
-				| {{mod.key}}:
-				input(type="number" ng-model="mod.value")
+		tr.modifiers
+			th.left Importance:
 
-		.misc
-			label Misc&nbsp;
+			td
+				label(ng-repeat="mod in modifiers" title="{{mod.title}}")
+					| {{mod.title}}:
+					input(type="number" ng-model="$parent.params.modifiers[$index]")
 
-			label
-				input(type="checkbox" ng-model="noUpgrades")
-				| No upgrades
+		tr.misc
+			th.left Misc.:
+
+			td
+				label
+					input(type="checkbox" ng-model="params.useUpgrades")
+					| Include available upgrades
 
 	button(ng-click="calculate()" ng-disabled="availableLoad < 0")
-		| Find best armor combination for {{availableLoad}} weight
+		| Find the
+		input(type="number" ng-model="params.resultLimit" ng-click="$event.stopPropagation();")
+		| best available armor combination for {{availableLoad}} weight
 
 	div
-		| {{gridOptions.data.length}} result(s)
+		span(ng-if="results.length > params.resultLimit") Top&nbsp;
+		| {{gridOptions.data.length}} combinations
 
 	div(ui-grid-auto-resize ui-grid="gridOptions")
