--- a/src/index.jade
+++ b/src/index.jade
@@ -25,6 +25,8 @@ html(ng-app="dsc")
 		script(src="app.js")
 
 body(ng-controller="mainController")
+	header
+		h1 Dark Souls Companion
 	.page
 		nav
 			ul
