--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -1,5 +1,12 @@
+@font-face
+	font-family: 'OptimusPrinceps'
+	src: url('/app/content/fonts/OptimusPrinceps.eot')
+	src: local('OptimusPrinceps'), url('/app/content/fonts/OptimusPrinceps.woff') format('woff'), url('/app/content/fonts/OptimusPrinceps.ttf') format('truetype')
+
+
 body, table, textarea, button
 	font-family: 'Segoe WP', 'segoe ui', arial, sans-serif
+	//font-family: 'Times New Roman', sans-serif
 	font-size: medium
 
 
