--- a/src/style/layout.sass
+++ b/src/style/layout.sass
@@ -1,10 +1,27 @@
 $border : 1px solid black
 $width : 900px
 
+body
+	text-align: center
+
+header
+	font-family: 'OptimusPrinceps', sans-serif
+	display: inline-block
+	width: $width
+	margin-top: 10px
+
+	h1
+		margin-top: 0
+		font-size: 3em
+
+
+/* Font downloaded from FontsForWeb.com */
+
 .page
 	display: table
 	margin: auto
 	width: 90%
+	text-align: left
 
 	> .main-content
 		border: $border
@@ -38,7 +55,7 @@ $width : 900px
 				
 				img
 					//border-radius: 16px
-					$size : 32px
+					$size : 24px
 					width: $size
 					height: $size
 
