"Add to inventory" no longer displays upgrades. Weapon finder now limits weapons to those matching stat requirements and has an option to increase stats for the search.

--- a/src/modules/weapon-finder/weapon-finder-view.jade
+++ b/src/modules/weapon-finder/weapon-finder-view.jade
@@ -1,5 +1,17 @@
 #WeaponFinder
+
+	table.params
+		tr.requirements
+			th.left Requirements:
+
+			td
+				label
+					| Add
+					input(type="number" ng-model="params.statBonus")
+					| to all stats
+
+
 	button(ng-click="findWeapons()")
-		| Find the best weapon
+		| Find
 
 	div(ui-grid-auto-resize ui-grid="gridOptions")
