--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -21,10 +21,12 @@ input[type="number"]
 button
 	border-radius: 8px
 	border-width: 1px
-	padding: 0.5em
-	//width: 200px
-	//height: 100px
+	padding: 0.2em
+	padding-top : 0
 	display: inline-block
+	min-width: 1.5em
+	//line-height: 1em
+	//min-height: 20px
 	vertical-align: baseline
 	background: rgb(206,220,231) /* Old browsers */
 	background: linear-gradient(to bottom, rgba(230,230,230,1) 0%,rgba(200,200,200,1) 100%) /* W3C */
