Adjusted armor calc score display, fixed a misnamed label tag.

--- a/src/modules/armor-calc/armor-calc-view.jade
+++ b/src/modules/armor-calc/armor-calc-view.jade
@@ -19,7 +19,7 @@
 					| Maximum:
 					input(type="number" ng-model="maxLoad" readonly)
 
-				pandp
+				label
 					input(type="checkbox" ng-model="params.havelRing")
 					| Havel's Ring
 
