--- a/src/modules/guide/guide-view.jade
+++ b/src/modules/guide/guide-view.jade
@@ -12,16 +12,22 @@
 script#GuideEntry(type="text/ng-template")
 	.header(ng-if="entry.title")
 
-		.buttons
+		.buttons(ng-if="entry.meta.isEnabled")
 			button.check-mark(
 				ng-click="entryDone(entry)"
 				title="Mark as done"
 			) ✓
-			button.dane-and-add(
+			button.done-and-add(
 				ng-click="entryDoneAndAdd(entry)"
 				title="Mark as done and add item to inventory"
-				ng-disable="!canAddToInventory(entry)"
+				ng-if="entry.meta.isItem"
 			) ✓+
+			button.trigger-event(
+				ng-click="enact(entry)"
+				title="I did this / this happened."
+				ng-if="entry.meta.setsFlags"
+			) ❢
+
 
 		.title(ng-click="entryClicked($event, entry)")
 			| {{entry.title}} {{entry.meta.arrow}}
