Reworking PC page.

--- a/src/modules/armor-calc/armor-calc-view.jade
+++ b/src/modules/armor-calc/armor-calc-view.jade
@@ -13,7 +13,7 @@
 
 				label
 					| Reserved (weapons):
-					input(ng-model="params.reservedWeight" type="number")
+					input(ng-model="params.reservedWeight" type="number" min="0")
 
 				label
 					| Maximum:
