--- a/src/modules/pc/pc-style.sass
+++ b/src/modules/pc/pc-style.sass
@@ -1,4 +1,17 @@
 #Pc
+	display: table
+	box-sizing: border-box
+
+	.container
+		display: table-row
+
+		.stats, .inventory
+			display: table-cell
+			vertical-align: top
+
+		.stats
+			width: 10%
+			min-width: 100px
 
 	.ui-grid-row-header-cell
 		$buttonSize : 25px
