--- a/src/modules/weapon-finder/weapon-finder-view.jade
+++ b/src/modules/weapon-finder/weapon-finder-view.jade
@@ -1,14 +1,23 @@
 #WeaponFinder
 
 	table.params
-		tr.requirements
-			th.left Requirements:
+		tr.limits
+			th.left Limits:
 
 			td
+				| Stat requirements:
+				label(ng-repeat="(name,value) in params.reqLimits")
+					| {{name | statName}}:
+					input(type="number" ng-model="$parent.params.reqLimits[name]" min=0 max=99)
+				button(ng-click="copyStatsToReqs()" title="Use current player stats.")
+					img(src="/app/content/menu-icons/pc.png")
+
+		tr.misc
+			th.left Misc.:
+			td
 				label
-					| Add
-					input(type="number" ng-model="params.statBonus")
-					| to all stats
+					input(type="checkbox" ng-model="params.includeUpgrades")
+					| Include available upgrades
 
 
 	button(ng-click="findWeapons()")
