--- a/src/style.sass
+++ b/src/style.sass
@@ -6,4 +6,4 @@
 @import "modules/guide/style"
 @import "modules/items/style"
 @import "modules/pc/pc-style"
-
+@import "modules/weapon-finder/weapon-finder-style"
