--- a/src/style.sass
+++ b/src/style.sass
@@ -1,9 +1,11 @@
 @import "style/global"
-@import "style/ui-grid"
-
 @import "style/layout"
 
-@import "modules/guide/style"
+@import "style/ui-grid"
+
+@import "style/_notifications"
+
+@import "modules/tracker/tracker-style"
 @import "modules/items/style"
 @import "modules/pc/pc-style"
 @import "modules/weapon-finder/weapon-finder-style"
