--- a/src/modules/weapon-finder/weapon-finder-view.jade
+++ b/src/modules/weapon-finder/weapon-finder-view.jade
@@ -5,11 +5,23 @@
 			th.left Limits:
 
 			td
-				label(ng-repeat="(name,value) in params.reqLimits")
+				label(ng-repeat="name in reqLimitArray")
 					| {{name | statName}}:
 					input(type="number" ng-model="$parent.params.reqLimits[name]" min=0 max=99)
 				button(ng-click="copyStatsToReqs()" title="Use current player stats.")
 					img(src="/app/content/menu-icons/pc.png")
+
+		tr.importance
+			th.left Importance:
+
+			td
+				label
+					input(type="checkbox" ng-model="params.useDps" title="Look at DPS instead of ATK when calculating scores.")
+					| Use DPS
+
+				label(ng-repeat="name in statArray")
+					| {{name}}:
+					input(type="number" ng-model="$parent.params.modifiers[name]")
 
 		tr.misc
 			th.left Misc.:
@@ -18,11 +30,19 @@
 					input(type="checkbox" ng-model="params.includeUpgrades")
 					| Include available upgrades
 
+				label(title="Attack type to use for calculating damage-per-stamina.")
+					| DPS attack:
+					select(
+						ng-model="params.dpsCalcMove"
+						ng-options="dpsCalcOptions.indexOf(label) as label for label in dpsCalcOptions"
+					)
 
 	button(ng-click="findWeapons()")
 		| Find
-		select(ng-click="$event.stopPropagation()" ng-model="params.searchType")
-			option(value="offence") weapons
-			option(value="defence") shields
+		select(
+			ng-click="$event.stopPropagation()"
+			ng-model="params"
+			ng-options="paramSet as paramSetNames[paramSets.indexOf(paramSet)] for paramSet in paramSets"
+		)
 
 	div(ui-grid-auto-resize ui-grid="gridOptions")
