--- a/src/modules/pc/pc-style.sass
+++ b/src/modules/pc/pc-style.sass
@@ -1,17 +1,30 @@
 #Pc
-	display: table
 	box-sizing: border-box
 
 	.container
-		display: table-row
-
-		.stats, .inventory
-			display: table-cell
-			vertical-align: top
+		width: 100%
+		height: 100%
 
 		.stats
-			width: 10%
-			min-width: 100px
+			float: left
+			overflow-x: auto
+
+		.inventory
+			height: 100%
+			overflow: hidden
+			position: relative
+
+			.stretcher
+				height: 100%
+				position: relative
+
+				.ui-grid
+					position: absolute
+					top: 0
+					bottom: 0
+					right: 0
+					left: 0
+
 
 	.ui-grid-row-header-cell
 		$buttonSize : 25px
