--- a/src/modules/pc/pc-view.jade
+++ b/src/modules/pc/pc-view.jade
@@ -1,12 +1,13 @@
 #Pc
 	.container
-		table.stats
-			thead: tr: th(colspan=2): h3 Stats
-			tbody: tr(ng-repeat="stat in userData.stats | toStatArray")
-				td {{stat.name}}:
+		.stats
+			h3 Stats
+			table: tr(ng-repeat="stat in userData.stats | toStatArray")
+				td {{stat.name | fullStatName}}:
 				td
 					input(type="number"
-						min=8 max=99
+						mask="99"
+						restrict="reject"
 						ng-model="$parent.userData.stats[stat.name]"
 						ng-change="saveUserData()"
 					)
@@ -34,8 +35,9 @@
 				minlength=1
 			)
 
-			// Grid
-			div(ui-grid="gridOptions" ui-grid-auto-resize ui-grid-save-state)
+			.stretcher
+				// Grid
+				div(ui-grid="gridOptions" ui-grid-auto-resize ui-grid-save-state)
 
 // Grid action buttons
 script(id="GridRowHeader.html" type="text/ng-template")
