--- a/src/style/layout.sass
+++ b/src/style/layout.sass
@@ -1,64 +1,89 @@
 $border : 1px solid black
-$width : 900px
+$headerHeight : 8.5em
 
 body
 	text-align: center
+	position: relative
+	height: 100vh
+	margin: 0
+	padding: 0
 
 header
-	font-family: 'OptimusPrinceps', sans-serif
-	display: inline-block
-	width: $width
-	margin-top: 10px
+	height: $headerHeight
 
 	h1
+		font-family: 'OptimusPrinceps', sans-serif
 		margin-top: 0
 		font-size: 3em
+		padding-top: 10px
+		box-sizing: border-box
+
+footer
+	position: absolute
+	height: 2em
+	bottom: 0
 
 
 /* Font downloaded from FontsForWeb.com */
 
 .page
-	display: table
-	margin: auto
-	width: 90%
 	text-align: left
+	position: absolute
+	top: $headerHeight
+	bottom: 2em
+	left: 0
+	right: 0
+	width: 100%
 
-	> .main-content
-		border: $border
-		border-top: 0
-		box-sizing: border-box
-		width: 100%
-		padding: 0.5em
+	> .stretcher
+		position: relative
+		height: 100%
 
-	> nav
-		$liPadding : 5px
-		width: 100%
-		display: table
-		ul
-			padding: 0
-			margin: 0
-			display: table-row
-		li
-			display: table-cell
+		$navHeight : 2.5em
+
+		> .main-content
 			border: $border
-			$br: 8px
-			border-radius: $br $br 0 0
-			text-align: center
-			background: #CCB280
-			font-weight: bold
+			border-top: 0
+			position: absolute
+			top: $navHeight
+			bottom: 0
+			left: 0
+			right: 0
+			padding: 0.5em
 
-			a
-				color: #000
-				text-decoration: none
-				display: block
-				padding: $liPadding
-				
-				img
-					//border-radius: 16px
-					$size : 24px
-					width: $size
-					height: $size
+			> div
+				height: 100%
 
-			&.current
-				border-bottom: none
-				background: #fff
+		> nav
+			$liPadding : 5px
+			width: 100%
+			height: $navHeight
+			display: table
+			ul
+				padding: 0
+				margin: 0
+				display: table-row
+			li
+				display: table-cell
+				border: $border
+				$br: 8px
+				border-radius: $br $br 0 0
+				text-align: center
+				background: #CCB280
+				font-weight: bold
+
+				a
+					color: #000
+					text-decoration: none
+					display: block
+					padding: $liPadding
+
+					img
+						//border-radius: 16px
+						$size : 24px
+						width: $size
+						height: $size
+
+				&.current
+					border-bottom: none
+					background: #fff
