--- a/src/style/ui-grid.sass
+++ b/src/style/ui-grid.sass
@@ -1,6 +1,7 @@
 .ui-grid
 	font-family: 'Helvetica', 'Arial', sans-serif
 	font-size: small
+	height: 100% !important
 
 .ui-grid-menu-button
 	height: 24px
