--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -3,11 +3,19 @@
 	src: url('/app/content/fonts/OptimusPrinceps.eot')
 	src: local('OptimusPrinceps'), url('/app/content/fonts/OptimusPrinceps.woff') format('woff'), url('/app/content/fonts/OptimusPrinceps.ttf') format('truetype')
 
+*
+	box-sizing: border-box
 
 body, table, textarea, button, input
 	font-family: 'Segoe WP', 'segoe ui', arial, sans-serif
 	//font-family: 'Times New Roman', sans-serif
 	font-size: medium
+
+table
+	border-spacing: 0
+
+td
+	vertical-align: top
 
 
 angucomplete-alt
