--- a/src/modules/weapon-finder/weapon-finder-style.sass
+++ b/src/modules/weapon-finder/weapon-finder-style.sass
@@ -1,6 +1,16 @@
 #WeaponFinder
+	display: table
+	width: 100%
+	height: 100%
 
-	@include stretch-grid(10em)
+	.header, .grid
+		display: table-row
+
+	.grid
+		height: 100%
+
+	.ui-grid
+		display: table-cell
 
 	button img
 		width: 20px
