--- a/src/modules/weapon-finder/weapon-finder-view.jade
+++ b/src/modules/weapon-finder/weapon-finder-view.jade
@@ -1,48 +1,51 @@
-#WeaponFinder
+table#WeaponFinder
+	tr.header
+		td.content
+			table.params
+				tr.limits
+					th.left Limits:
 
-	table.params
-		tr.limits
-			th.left Limits:
+					td
+						label(ng-repeat="name in reqLimitArray")
+							| {{name | statName}}:
+							input(type="number" ng-model="$parent.params.reqLimits[name]" min=0 max=99)
+						button(ng-click="copyStatsToReqs()" title="Use current player stats.")
+							img(src="/app/content/menu-icons/pc.png")
 
-			td
-				label(ng-repeat="name in reqLimitArray")
-					| {{name | statName}}:
-					input(type="number" ng-model="$parent.params.reqLimits[name]" min=0 max=99)
-				button(ng-click="copyStatsToReqs()" title="Use current player stats.")
-					img(src="/app/content/menu-icons/pc.png")
+				tr.importance
+					th.left Importance:
 
-		tr.importance
-			th.left Importance:
+					td
+						label
+							input(type="checkbox" ng-model="params.useDps" title="Look at DPS instead of ATK when calculating scores.")
+							| Use DPS
 
-			td
-				label
-					input(type="checkbox" ng-model="params.useDps" title="Look at DPS instead of ATK when calculating scores.")
-					| Use DPS
+						label(ng-repeat="name in statArray")
+							| {{name}}:
+							input(type="number" ng-model="$parent.params.modifiers[name]")
 
-				label(ng-repeat="name in statArray")
-					| {{name}}:
-					input(type="number" ng-model="$parent.params.modifiers[name]")
+				tr.misc
+					th.left Misc.:
+					td
+						label
+							input(type="checkbox" ng-model="params.includeUpgrades")
+							| Include available upgrades
 
-		tr.misc
-			th.left Misc.:
-			td
-				label
-					input(type="checkbox" ng-model="params.includeUpgrades")
-					| Include available upgrades
+						label(title="Attack type to use for calculating damage-per-stamina.")
+							| DPS attack:
+							select(
+								ng-model="params.dpsCalcMove"
+								ng-options="dpsCalcOptions.indexOf(label) as label for label in dpsCalcOptions"
+							)
 
-				label(title="Attack type to use for calculating damage-per-stamina.")
-					| DPS attack:
-					select(
-						ng-model="params.dpsCalcMove"
-						ng-options="dpsCalcOptions.indexOf(label) as label for label in dpsCalcOptions"
-					)
+			button(ng-click="findWeapons()")
+				| Find
+				select(
+					ng-click="$event.stopPropagation()"
+					ng-model="params"
+					ng-options="paramSet as paramSetNames[paramSets.indexOf(paramSet)] for paramSet in paramSets"
+				)
 
-	button(ng-click="findWeapons()")
-		| Find
-		select(
-			ng-click="$event.stopPropagation()"
-			ng-model="params"
-			ng-options="paramSet as paramSetNames[paramSets.indexOf(paramSet)] for paramSet in paramSets"
-		)
-
-	div(ui-grid-auto-resize ui-grid="gridOptions")
+	tr.grid-row
+		td.content
+			div(ui-grid-auto-resize ui-grid="gridOptions")
