--- a/src/style/layout.sass
+++ b/src/style/layout.sass
@@ -1,91 +1,72 @@
-$border : 1px solid black
-$headerHeight : 8.5em
-
 body
-	text-align: center
-	position: relative
-	height: 100vh
-	margin: 0
-	padding: 0
-
-header
-	height: $headerHeight
-
-	h1
-		font-family: 'OptimusPrinceps', sans-serif
-		margin-top: 0
-		font-size: 3em
-		padding-top: 10px
-		box-sizing: border-box
-
-footer
-	position: absolute
-	height: 2em
-	bottom: 0
-	left: 0
-	right: 0
-
-
-/* Font downloaded from FontsForWeb.com */
-
-.page
-	text-align: left
-	position: absolute
-	top: $headerHeight
-	bottom: 2em
-	left: 0
-	right: 0
+	display: table
 	width: 100%
+	height: 100vh
+	box-sizing: border-box
+	margin: 0
+	padding: 0.15em
+	$border : 1px solid black
 
-	> .stretcher
-		position: relative
+	& > header, nav, main, footer
+		display: table-row
+
+		& > .content
+			display: table-cell
+
+
+	& > main
 		height: 100%
-
-		$navHeight : 2.5em
-
-		> .main-content
+		> .content
 			border: $border
 			border-top: 0
-			position: absolute
-			top: $navHeight
-			bottom: 0
-			left: 0
-			right: 0
-			padding: 0.5em
-
-			> div
+			> table
 				height: 100%
+				width: 100%
 
-		> nav
-			$liPadding : 5px
-			width: 100%
-			height: $navHeight
+	& > header
+		text-align: center
+
+		h1
+			font-family: 'OptimusPrinceps', sans-serif
+			font-size: 3em
+
+	& > footer
+		text-align: center
+
+
+	& > nav > .content
+		$liPadding : 5px
+
+		.tab-strip
 			display: table
+			width: 100%
+
 			ul
 				padding: 0
 				margin: 0
 				display: table-row
-			li
-				display: table-cell
-				border: $border
-				$br: 8px
-				border-radius: $br $br 0 0
-				text-align: center
-				background: #CCB280
-				font-weight: bold
 
-				a
-					color: #000
-					text-decoration: none
-					display: block
-					padding: $liPadding
+				li
+					display: table-cell
+					border: $border
+					$br: 8px
+					border-radius: $br $br 0 0
+					text-align: center
+					background: #CCB280
+					font-weight: bold
 
-					img
-						//border-radius: 16px
-						$size : 24px
-						width: $size
-						height: $size
+					a
+						color: #000
+						text-decoration: none
+						display: block
+						padding: $liPadding
 
-				&.current
-					border-bottom: none
-					background: #fff
+						img
+							//border-radius: 16px
+							$size : 24px
+							width: $size
+							height: $size
+
+					&.current
+						border-bottom: none
+						background: #fff
