--- a/src/style/ui-grid.sass
+++ b/src/style/ui-grid.sass
@@ -1,4 +1,18 @@
-.ui-grid
+.grid-row
+	> .content
+		position: relative
+		height: 100%
+		width: 100%
+
+	.ui-grid
+		position: absolute
+		$padding : 0
+		top: $padding
+		bottom: $padding
+		left: $padding
+		right: $padding
+
+.ui-grid-contents-wrapper
 	font-family: 'Helvetica', 'Arial', sans-serif
 	font-size: small
 
