--- a/src/style/ui-grid.sass
+++ b/src/style/ui-grid.sass
@@ -1,16 +1,6 @@
-.grid-row
-	> .content
-		position: relative
-		height: 100%
-		width: 100%
-
-	.ui-grid
-		position: absolute
-		$padding : 0
-		top: $padding
-		bottom: $padding
-		left: $padding
-		right: $padding
+.ui-grid
+	align-self: stretch
+	flex-grow: 1
 
 .ui-grid-contents-wrapper
 	font-family: 'Helvetica', 'Arial', sans-serif
