--- a/src/index.jade
+++ b/src/index.jade
@@ -41,48 +41,44 @@ body(ng-controller="mainController")
 			ng-bind-html="message.text"
 		)
 	header
-		.content
-			h1 Dark Souls Companion
-			h2
-				label
-					| Profile:
-					select(
-						ng-model="currentProfile"
-						ng-options="profile for profile in profileList"
-						ng-change="switchProfile()"
-					)
-
-				input(
-					type="text"
-					ng-model="$parent.newProfileName"
-					ng-if="profileEditStatus === 'new'"
+		h1 Dark Souls Companion
+		h2
+			label
+				| Profile:
+				select(
+					ng-model="currentProfile"
+					ng-options="profile for profile in profileList"
+					ng-change="switchProfile()"
 				)
 
-				button(
-					ng-click="addNewProfile()"
-					ng-if="profileEditStatus == null || profileEditStatus == 'new'"
-				) +
+			input(
+				type="text"
+				ng-model="$parent.newProfileName"
+				ng-if="profileEditStatus === 'new'"
+			)
 
-				button(ng-click="deleteProfile()"
-					ng-if="profileEditStatus == null || profileEditStatus == 'delete'"
-				) −
+			button(
+				ng-click="addNewProfile()"
+				ng-if="profileEditStatus == null || profileEditStatus == 'new'"
+			) +
 
-				button(
-					ng-click="resetProfileEditStatus()"
-					ng-if="profileEditStatus != null"
-				) Cancel
+			button(ng-click="deleteProfile()"
+				ng-if="profileEditStatus == null || profileEditStatus == 'delete'"
+			) −
+
+			button(
+				ng-click="resetProfileEditStatus()"
+				ng-if="profileEditStatus != null"
+			) Cancel
 
 	nav
-		.content
-			.tab-strip
-				ul
-					li(ng-repeat="item in menu" ng-class="{current: $parent.thisLocation.indexOf(item.path)==0}")
-						a(href="#{{item.path}}")
-							img(ng-src="/app/content/menu-icons/{{item.path}}.png")
-							| {{item.name}}
+		ul
+			li(ng-repeat="item in menu" ng-class="{current: $parent.thisLocation.indexOf(item.path)==0}")
+				a(href="#{{item.path}}")
+					img(ng-src="/app/content/menu-icons/{{item.path}}.png")
+					| {{item.name}}
 
-	main
-		.content(ng-view)
+	main(ng-view)
 
 	footer
 		| v0.1, made by&nbsp;
