--- a/src/modules/pc/pc-style.sass
+++ b/src/modules/pc/pc-style.sass
@@ -1,14 +1,12 @@
 #Pc
-	> tbody > .content
-		height: 100%
+	display: flex
+	flex-direction: row
 
-		> .inventory
-			width: 100%
-
-			> .content
-				width: 100%
-				height: 100%
-
+	.inventory
+		display: flex
+		flex-grow: 1
+		flex-direction: column
+		align-self: stretch
 
 	.ui-grid-row-header-cell
 		$buttonSize : 25px
