--- a/src/style/layout.sass
+++ b/src/style/layout.sass
@@ -1,72 +1,72 @@
+$border : 1px solid black
+
 body
-	display: table
 	width: 100%
+	min-width: 600px
 	height: 100vh
-	box-sizing: border-box
+	display: flex
+	flex-direction: column
 	margin: 0
-	padding: 0.15em
-	$border : 1px solid black
-
-	& > header, nav, main, footer
-		display: table-row
-
-		& > .content
-			display: table-cell
 
 
-	& > main
+header, footer, nav
+	flex-shrink: 0
+	text-align: center
+
+
+main
+	align-self: stretch
+	border: $border
+	border-top: 0
+	flex-grow: 1
+	display: flex
+	flex-direction: column
+	min-height: 300px
+
+	> div
+		width: 100%
 		height: 100%
-		> .content
+		flex-grow: 1
+		align-self: stretch
+		display: flex
+		flex-direction: column
+
+header
+	h1
+		font-family: 'OptimusPrinceps', sans-serif
+		font-size: 3em
+
+
+nav
+	$liPadding : 5px
+
+	ul
+		display: flex
+		padding: 0
+		margin: 0
+
+		li
+			display: block
+			align-self: stretch
+			flex-grow: 1
 			border: $border
-			border-top: 0
-			> table
-				height: 100%
-				width: 100%
+			$br: 8px
+			border-radius: $br $br 0 0
+			background: #CCB280
+			font-weight: bold
 
-	& > header
-		text-align: center
+			a
+				color: #000
+				text-decoration: none
+				display: block
+				padding: $liPadding
 
-		h1
-			font-family: 'OptimusPrinceps', sans-serif
-			font-size: 3em
+				img
+					//border-radius: 16px
+					$size : 24px
+					width: $size
+					height: $size
 
-	& > footer
-		text-align: center
-
-
-	& > nav > .content
-		$liPadding : 5px
-
-		.tab-strip
-			display: table
-			width: 100%
-
-			ul
-				padding: 0
-				margin: 0
-				display: table-row
-
-				li
-					display: table-cell
-					border: $border
-					$br: 8px
-					border-radius: $br $br 0 0
-					text-align: center
-					background: #CCB280
-					font-weight: bold
-
-					a
-						color: #000
-						text-decoration: none
-						display: block
-						padding: $liPadding
-
-						img
-							//border-radius: 16px
-							$size : 24px
-							width: $size
-							height: $size
-
-					&.current
-						border-bottom: none
-						background: #fff
+			&.current
+				border-bottom: none
+				background: #fff
