--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -6,7 +6,7 @@
 *
 	box-sizing: border-box
 
-body, table, textarea, button, input
+body, table, textarea, button, input, select, option
 	font-family: 'Segoe WP', 'segoe ui', arial, sans-serif
 	//font-family: 'Times New Roman', sans-serif
 	font-size: medium
