--- a/src/modules/armor-finder/armor-finder-view.jade
+++ b/src/modules/armor-finder/armor-finder-view.jade
@@ -22,6 +22,10 @@
 					input(type="checkbox" ng-model="params.havelRing")
 					| Havel's Ring
 
+				label
+					input(type="checkbox" ng-model="params.favorRing")
+					| Ring of Favor and Protection
+
 		tr.modifiers
 			th.left Importance:
 
