--- a/src/style.sass
+++ b/src/style.sass
@@ -1,7 +1,7 @@
 @import "style/global"
 @import "style/layout"
 
-@import "style/ui-grid"
+@import "style/ui-grid.css"
 
 @import "style/_notifications"
 
@@ -10,3 +10,5 @@
 @import "modules/items/style"
 @import "modules/pc/pc-style"
 @import "modules/weapon-finder/weapon-finder-style"
+
+@import "style/theme/main"
