--- a/src/style/global.sass
+++ b/src/style/global.sass
@@ -38,10 +38,6 @@ input, button, select
 	border-width: 1px
 	display: inline-block
 
-	&:focus
-		outline: 1px dashed silver
-		outline-offset: 2px
-
 input
 	&[type="number"]
 		width: 50px
@@ -66,3 +62,6 @@ button
 
 img
 	vertical-align: middle
+
+.ui-grid
+	height: 10px
