--- a/src/modules/armor-finder/armor-finder-style.sass
+++ b/src/modules/armor-finder/armor-finder-style.sass
@@ -1,5 +1,20 @@
-#Tracker
-	.content
-		align-self: stretch
+#ArmorFinder
+	@each $row in (".params", "button")
+		> #{$row}
+			flex-grow: 0
+			flex-shrink: 0
+
+	> .ui-grid
 		flex-grow: 1
-		overflow: auto
+
+	.row
+		display: block
+
+	.params
+		display: flex
+
+		.limits .row
+			display: flex
+
+			strong
+				flex-grow: 1
