--- a/src/style/layout.sass
+++ b/src/style/layout.sass
@@ -1,72 +1,40 @@
-$border : 1px solid black
+.ui-grid
+	height: 10px
 
 body
 	width: 100%
 	min-width: 600px
+	margin: 0 !important
 	height: 100vh
 	display: flex
 	flex-direction: column
-	margin: 0
 
 
 header, footer, nav
 	flex-shrink: 0
-	text-align: center
 
 
 main
-	align-self: stretch
-	border: $border
 	border-top: 0
 	flex-grow: 1
+	flex-basis: 1px
 	display: flex
 	flex-direction: column
 	min-height: 300px
+	overflow: auto
 
 	> div
 		width: 100%
 		height: 100%
 		flex-grow: 1
-		align-self: stretch
 		display: flex
 		flex-direction: column
 
-header
-	h1
-		font-family: 'OptimusPrinceps', sans-serif
-		font-size: 3em
-
-
 nav
-	$liPadding : 5px
-
 	ul
 		display: flex
 		padding: 0
 		margin: 0
 
-		li
-			display: block
-			align-self: stretch
-			flex-grow: 1
-			border: $border
-			$br: 8px
-			border-radius: $br $br 0 0
-			background: #CCB280
-			font-weight: bold
-
-			a
-				color: #000
-				text-decoration: none
-				display: block
-				padding: $liPadding
-
-				img
-					//border-radius: 16px
-					$size : 24px
-					width: $size
-					height: $size
-
-			&.current
-				border-bottom: none
-				background: #fff
+	li
+		display: block
